--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -1,15 +1,33 @@
-@(title: String)(content: Html)
+@(title: String,  user: User)(content: Html)
 
-<!DOCTYPE html>
+@* @( user: User)(body: Html) *@
 
 <html>
-    <head>
-        <title>@title</title>
-        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
-        <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
-        <script src="@routes.Assets.at("javascripts/jquery-1.7.1.min.js")" type="text/javascript"></script>
-    </head>
-    <body>
-        @content
-    </body>
+<head>
+    <title>Zentasks</title>
+    <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
+    <link rel="stylesheet" type="text/css" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
+    <script type="text/javascript" src="@routes.Assets.at("javascripts/jquery-1.7.1.js")"></script>
+    <script type="text/javascript" src="@routes.Assets.at("javascripts/jquery-play-1.7.1.js")"></script>
+    <script type="text/javascript" src="@routes.Assets.at("javascripts/underscore-min.js")"></script>
+    <script type="text/javascript" src="@routes.Assets.at("javascripts/backbone-min.js")"></script>
+    <script type="text/javascript" src="@routes.Assets.at("javascripts/main.js")"></script>
+</head>
+<body>
+<header>
+    <a href="@routes.Application.admin" id="logo"><span>Admin panel</span></a>
+    <dl id="user">
+        <dt>@user.name <span>(@user.email)</span></dt>
+        <dd>
+            <a href="@routes.Application.logout()">Logout</a>
+        </dd>
+    </dl>
+</header>
+
+<section id="main">
+    @content
+</section>
+</body>
 </html>
+
+
