--- a/app/views/users.scala.html
+++ b/app/views/users.scala.html
@@ -1,8 +1,8 @@
-@(users: List[User], userForm: Form[User])
+@(users: List[User], userForm: Form[User], user: User)
 
 @import helper._
 
-@main("Users") {
+@main("Users", user) {
 
 <h1>@users.size() user(s)</h1>
 
