--- a/app/views/login.scala.html
+++ b/app/views/login.scala.html
@@ -2,7 +2,7 @@
 
 <html>
     <head>
-        <title>Portal</title>
+        <title>Saas Portal</title>
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
         <link rel="stylesheet" type="text/css" media="screen" href="@routes.Assets.at("stylesheets/login.css")">
     </head>
