--- a/app/views/users.scala.html
+++ b/app/views/users.scala.html
@@ -9,9 +9,7 @@
 <ul>
     @for(user <- users) {
     <li>
-        @user.id <br>
-        @user.name <br>
-        @user.email
+        <a href="/user/@user.email">@user.name</a>
 
         @form(routes.Users.deleteUser(user.id)) {
         <input type="submit" value="Delete">
