--- a/app/views/userDetails.scala.html
+++ b/app/views/userDetails.scala.html
@@ -6,6 +6,7 @@
 
 @user.name<br>
 @user.email<br>
+Used credits @user.usedCredits<br>
 user apps @user.userApps.size()<br>
 requested apps @user.requestedApps.size()
 <ul>
