kontrola czy admin

--- a/app/views/login.scala.html
+++ b/app/views/login.scala.html
@@ -37,7 +37,7 @@
         }
         
         <p class="note">
-            Try <em>guillaume@@sample.com</em> with <em>secret</em> as password.
+            Try <em>guillaume@@sample.com</em> or <em>admin@@sample.com</em> with <em>secret</em> as password.
         </p>
             
     </body>
