--- a/app/views/apps.scala.html
+++ b/app/views/apps.scala.html
@@ -22,15 +22,17 @@
     }
 </ul>
 
-<h2>Add a new app</h2>
+@if(user.isAdmin) {
+    <h2>Add a new app</h2>
 
-@form(routes.Apps.createApp()) {
+    @form(routes.Apps.createApp()) {
 
-@inputText(appForm("name"))
-@inputText(appForm("uri"))
+    @inputText(appForm("name"))
+    @inputText(appForm("uri"))
 
-<input type="submit" value="Create">
+    <input type="submit" value="Create">
+
+    }
 
 }
-
 }
