--- a/app/views/provisioning.scala.html
+++ b/app/views/provisioning.scala.html
@@ -6,21 +6,24 @@
 
 
 <ul>
-    @for(user <- users) {
-    <li>
-        @user.name @user.email <br>
-        @user.requestedApps.size()
-        @for(app <- user.requestedApps) {
-            <li>
-            @app.name
-            </li>
+  @for(user <- users) {
+    @if(user.requestedApps.size()>0) {
+        <li>
+            @user.name @user.email <br>
+            @user.requestedApps.size()
+            @for(app <- user.requestedApps) {
 
-        @form(routes.Provisioning.approveApp(user.email, app.id)) {
-        <input type="submit" value="Approve">
-        }
+                <li>
+                    @app.name
+                </li>
+
+                @form(routes.Provisioning.approveApp(user.email, app.id)) {
+                    <input type="submit" value="Approve">
+                }
+            }
+        </li>
     }
-    </li>
-    }
+  }
 </ul>
 
 }
