--- a/app/views/login.scala.html
+++ b/app/views/login.scala.html
@@ -35,7 +35,9 @@
             </p>
             
         }
-        
+
+        <a href="@routes.Users.register" ><span>Register</span></a>
+
         <p class="note">
             Try <em>guillaume@@sample.com</em> or <em>admin@@sample.com</em> with <em>secret</em> as password.
         </p>
