+registration - no validation

--- a/app/views/login.scala.html
+++ b/app/views/login.scala.html
@@ -36,7 +36,7 @@
             
         }
 
-        <a href="@routes.Users.register" ><span>Register</span></a>
+        <a href="@routes.Application.register" ><span>Register</span></a>
 
         <p class="note">
             Try <em>guillaume@@sample.com</em> or <em>admin@@sample.com</em> with <em>secret</em> as password.
