--- a/app/views/register.scala.html
+++ b/app/views/register.scala.html
@@ -18,7 +18,7 @@
 
 <h2>Reqister</h2>
 
-@form(routes.Users.createUser()) {
+@form(routes.Application.register()) {
 
 @inputText(userForm("name"))
 @inputText(userForm("email"))
