--- a/app/views/userDetails.scala.html
+++ b/app/views/userDetails.scala.html
@@ -6,7 +6,7 @@
 
 @user.name<br>
 @user.email<br>
-Used credits @user.usedCredits<br>
+Used credits @user.credits<br>
 user apps @user.userApps.size()<br>
 <ul>
     @for(app <- user.userApps) {
