--- a/app/views/apps.scala.html
+++ b/app/views/apps.scala.html
@@ -4,34 +4,32 @@
 
 @main("Applications", user) {
 
-<h1>@apps.size() app(s)</h1>
-
 <ul>
     @for(app <- apps) {
     <li>
-        @app.id <br>
-        @app.name <br>
-        @app.uri
-        @form(routes.Users.requestApp(user.email,app.id)){
-            <input type="submit" value="Request">
-        }
+        <b>Name:</b> @app.name <br>
+        <b>URL:</b> @app.uri
+        <div class="buttons">
+            @form(routes.Users.requestApp(user.email,app.id)){
+                <input type="submit" value="Request" >
+            }
+
         @form(routes.Apps.deleteApp(app.id)) {
             <input type="submit" value="Delete">
         }
+        </div>
+        <br>
     </li>
     }
 </ul>
 
 @if(user.isAdmin) {
-    <h2>Add a new app</h2>
+    <b>Add a new app</b>
 
     @form(routes.Apps.createApp()) {
-
-    @inputText(appForm("name"))
-    @inputText(appForm("uri"))
-
-    <input type="submit" value="Create">
-
+        @inputText(appForm("name"))
+        @inputText(appForm("uri"))
+        <input type="submit" value="Create">
     }
 
 }
