--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -16,7 +16,7 @@
 <body>
 <header>
     <dl id="user">
-        <dt>@user.name <span>(@user.email)</span></dt>
+        <dt>@user.name <span>(@user.email)</span> credits: @user.credits</dt>
         <dd>
             <a href="@routes.Application.logout()">Logout</a>
         </dd>
