--- a/app/assets/stylesheets/myMain.less
+++ b/app/assets/stylesheets/myMain.less
@@ -27,6 +27,15 @@ a {
     }
 }
 
+h1 {
+        margin: 0 0 10px;
+        font-size: 20px;
+        font-weight: bold;
+    }
+li{
+    margin-left: 10px;
+}
+
 
 
 form {
