--- a/app/views/myapps.scala.html
+++ b/app/views/myapps.scala.html
@@ -4,8 +4,9 @@
 
 @main("My applications", user) {
 
+<h1>My applications</h1>
 @if(myApps.size()==0) {
- <h1>You don't have any applications</h1>
+ <h2>You don't have any applications</h2>
 }
 
 <ul>
