--- a/app/views/register.scala.html
+++ b/app/views/register.scala.html
@@ -16,10 +16,8 @@
 </head>
 <body>
 
-<h2>Reqister</h2>
-
 @form(routes.Application.register()) {
-
+<h1>Register</h1>
 @inputText(userForm("name"))
 @inputText(userForm("email"))
 @inputText(userForm("password"))
