--- a/app/views/register.scala.html
+++ b/app/views/register.scala.html
@@ -14,16 +14,15 @@
     <script type="text/javascript" src="@routes.Assets.at("javascripts/backbone-min.js")"></script>
     <script type="text/javascript" src="@routes.Assets.at("javascripts/main.js")"></script>
 </head>
-<body>
+<body style="margin:10px;">
 
 @form(routes.Application.register()) {
-<h1>Register</h1>
-@inputText(userForm("name"))
-@inputText(userForm("email"))
-@inputText(userForm("password"))
+    <h1>Register</h1>
+    @inputText(userForm("name"))
+    @inputText(userForm("email"))
+    @inputText(userForm("password"))
 
-<input type="submit" value="Create">
-
+    <input type="submit" value="Create">S
 }
 </body>
 
