--- a/app/views/register.scala.html
+++ b/app/views/register.scala.html
@@ -13,11 +13,11 @@
 </head>
 <body style="margin:10px;">
 
-@form(routes.Application.register()) {
+form(routes.Application.register()) {
     <h1>Register</h1>
-    @inputText(userForm("name"))
-    @inputText(userForm("email"))
-    @inputText(userForm("password"))
+    inputText(userForm("name"))
+    inputText(userForm("email"))
+    inputText(userForm("password"))
 
     <input type="submit" value="Create">S
 }
