automatyczne logowanie do portalu gdy jest ssso token

--- a/app/views/login.scala.html
+++ b/app/views/login.scala.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         
-        @helper.form(routes.Application.authenticate) {
+        @helper.form(routes.Application.authenticate()) {
             
             <h1>Sign in</h1>
             
