--- a/app/views/provisioning.scala.html
+++ b/app/views/provisioning.scala.html
@@ -1,5 +1,5 @@
 @(users: List[User], user: User)
-
+@import helper._
 @main("Provisioning", user) {
 
 <h1>Requests</h1>
@@ -14,7 +14,7 @@
                     @app.name - @user.name @user.email
                 </li>
                 <div class="buttons">
-                    form(routes.Provisioning.approveApp(user.email, app.id)) {
+                    @form(routes.Provisioning.approveApp(user.email, app.id)) {
                         <input type="submit" value="Approve">
                     }
                 </div>
